# RWA

./: .gitignore  .gitmodules  CHANGELOG.md  ConstructorArgsAssetX.md  DEPLOYMENT.md  LICENSE  README.md  check_error_signatures.js  contract-addresses.json  deployment-log.txt  foundry.toml  package-lock.json  package.json  production.json  remappings.txt  removeC3DappsList.js
3252X/: foundry.toml  hardhat.config.ts  package.json  remappings.txt
CTM3525X/: package-lock.json
CTMRWA001/: ERC20.txt  LICENSE  README.md  TheiaLiquidityStaking.sol  deployment-log.txt  etherscan.json  foundry.toml  hardhat.config.js  hardhat.config.ts  old-deployment-log.txt  old3-deployment-log.txt  package-lock.json  package.json  remappings.txt
CTMRWA001/contracts/Stellar/assetx/: Cargo.toml
CTMRWA001/contracts/Stellar/assetx/contracts/CtmRwa001/: Cargo.toml  Makefile
CTMRWA001/contracts/Stellar/assetx/contracts/CtmRwa001/src/: ctm_rwa001.rs  lib.rs
CTMRWA001/contracts/Stellar/assetx/contracts/CtmRwa001Factory/: Cargo.toml
CTMRWA001/contracts/Stellar/assetx/contracts/CtmRwa001Factory/src/: ctm_rwa001_factory.rs
CTMRWA001/contracts/Stellar/assetx/contracts/CtmRwa001X/: Cargo.toml
CTMRWA001/contracts/Stellar/assetx/contracts/CtmRwa001X/src/: ctm_rwa001_x.rs  lib.rs
CTMRWA001/contracts/Stellar/assetx/contracts/CtmRwaDeployer/: Cargo.toml
CTMRWA001/contracts/Stellar/assetx/contracts/CtmRwaDeployer/src/: ctm_rwa_deployer.rs
CTMRWA001/contracts/Stellar/assetx/contracts/CtmRwaGateway/src/: ctm_rwa_gateway.rs
CTMRWA001/contracts/Stellar/assetx/contracts/CtmRwaMap/: Cargo.toml
CTMRWA001/contracts/Stellar/assetx/contracts/CtmRwaMap/src/: ctm_rwa_map.rs
Greenfield/: checkRwaObject.js  greenfieldFrontend.js
contracts/: CTMRWA001DividendFactory.sol  CTMRWAMap.sol
docs/: DEPLOYMENT.md
helpers/: 0-flatten.sh  1-build-flattened.sh  2-build-flattened.sh  2-build-script.sh  2-build.sh  3-build-src.sh  3-export-env.sh  4-build-test.sh  7-deploy-identity.sh  build-src.sh  build.sh  flatten.sh  restore.sh  verify-CTMRWA001X.sh  verify-CTMRWA1X.sh
javascript/: fees.js  package-lock.json
js-helpers/: 0-generate-environment.js  1-save-contract-addresses.js  2-save-identity-addresses.js  generate-environment.js  list-contract-addresses.js
save/: BasicTests.t.sol  DeployPart2.s.sol
script/: AddLocalContracts.s.sol  AddMPC.s.sol  AddTxSender.s.sol  CheckTxSender.s.sol  ConfigureAssetX.s.sol  DappConfig.s.sol  DeleteDappConfig.s.sol  Deploy.s.sol  DeployAll.s.sol  DeployAssetX.s.sol  DeployC3FallbackX.s.sol  DeployIdentity.s.sol  DeployPart1.s.sol  DeployPart2.s.sol  Dummy.s.sol  LoadDeployedContracts.s.sol  NewChainSetup.s.sol  Utils.s.sol  (+3 more)
(+1553 files in other folders)
