[workspace]
resolver = "2"
members = [
    "contracts/CtmRwa001",
    "contracts/CtmRwa001Factory",
]

[workspace.dependencies]
soroban-sdk = "21.7.2"

#[dependencies]
#soroban-sdk = { version = "21.7.2", features = ["alloc"] }

#[dev-dependencies]
#soroban-sdk = { version = "21.7.2", features = ["testutils"] }

[profile.release]
opt-level = "z" # Optimize for size
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true