[package]
name = "ctm_rwa001"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

#[dependencies]
#soroban-sdk = { workspace = true }

[dependencies]
soroban-sdk = { workspace = true, version = "21.7.2", features = ["alloc"] }

[dev-dependencies]
soroban-sdk = { workspace = true, version = "21.7.2", features = ["testutils"] }