[package]
name = "ctm_rwa_001x"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
soroban-sdk = { workspace = true, version = "22.0.7", features = ["alloc"] }
ethabi = { version = "18.0.0", default-features = false } # Use no_std compatible version if needed
serde = { version = "1.0", default-features = false, features = ["derive"] }


[dev-dependencies]
soroban-sdk = { workspace = true, version = "22.0.7", features = ["testutils"] }
